--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@alch/alchemy-web3": "^1.1.4",
     "@chainlink/contracts": "^0.2.2",
     "@openzeppelin/contracts": "^4.3.2",
+    "@openzeppelin/contracts-upgradeable": "^4.3.2",
     "@superfluid-finance/ethereum-contracts": "^1.0.0-rc.7",
     "@uniswap/v3-periphery": "^1.2.1",
     "dotenv": "^10.0.0"
