--- a/dapp/manifest.json
+++ b/dapp/manifest.json
@@ -8,13 +8,13 @@
     },
     "icons": [
         {
-            "src": "./images/192x192.png",
+            "src": "/images/192x192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "./images/512x512.png",
+            "src": "/images/512x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
@@ -23,7 +23,7 @@
     "orientation": "portrait",
     "name": "Degen Dogs",
     "description": "NFTs that do DeFi",
-    "iconPath": "./images/256x256_App_Icon_Pink.svg",
+    "iconPath": "/images/256x256.png",
     "short_name": "Degen Dogs",
     "start_url": ".",
     "theme_color": "#ff007a",
