--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aave/protocol-v2": "^1.0.1",
     "@alch/alchemy-web3": "^1.1.4",
     "@chainlink/contracts": "^0.2.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@openzeppelin/contracts": "^4.3.2",
     "@openzeppelin/contracts-upgradeable": "^4.3.2",
     "@superfluid-finance/ethereum-contracts": "^1.0.0-rc.7",
