--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
-    "hardhat": "^2.6.4"
+    "hardhat": "^2.6.4",
+    "mocha": "^9.2.0"
   },
   "dependencies": {
     "@aave/protocol-v2": "^1.0.1",
