--- a/.github/workflows/mumbai.yml
+++ b/.github/workflows/mumbai.yml
@@ -18,5 +18,6 @@ jobs:
         uses: SkynetLabs/deploy-to-skynet-action@v2
         with:
           upload-dir: dapp
+          portal-url: fileportal.org
           github-token: ${{ secrets.GITHUB_TOKEN }}
           registry-seed: ${{ secrets.SKYNET_REGISTRY_SEED_MUMBAI || '' }}
