--- a/.github/workflows/mumbai.yml
+++ b/.github/workflows/mumbai.yml
@@ -19,5 +19,6 @@ jobs:
         with:
           upload-dir: dapp
           skynet-jwt: ${{ secrets.SKYNET_JWT || '' }}
+          portal-url: https://skynetpro.net
           github-token: ${{ secrets.GITHUB_TOKEN }}
           registry-seed: ${{ secrets.SKYNET_REGISTRY_SEED_MUMBAI || '' }}
