--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy to Skynet
 
 on:
   push:
-    branches: [none]
+    branches: [main]
 
 jobs:
   build:
@@ -18,5 +18,7 @@ jobs:
         uses: SkynetLabs/deploy-to-skynet-action@v2
         with:
           upload-dir: dapp
+          skynet-jwt: ${{ secrets.SKYNET_JWT || '' }}
+          portal-url: https://fileportal.org
           github-token: ${{ secrets.GITHUB_TOKEN }}
           registry-seed: ${{ secrets.SKYNET_REGISTRY_SEED || '' }}
