--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: SkynetLabs/deploy-to-skynet-action@v2
         with:
           upload-dir: dapp
-          skynet-jwt: ${{ secrets.SKYNET_JWT || '' }}
+          skynet-api-key: ${{ secrets.SKYNET_JWT || '' }}
           portal-url: https://skynetfree.net
           github-token: ${{ secrets.GITHUB_TOKEN }}
           registry-seed: ${{ secrets.SKYNET_REGISTRY_SEED || '' }}
