--- a/.github/workflows/pinata.yml
+++ b/.github/workflows/pinata.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
           RECORD_DOMAIN: "degendogs.club"
-          RECORD_NAME: "_dnslink"
+          RECORD_NAME: "_dnslink.ipfs"
           CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
         id: dnslink
         uses: textileio/cloudflare-update-dnslink@master
